<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg"
    tools:context=".EditPet2Activity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/add_pet_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/def_margin"
        android:layout_marginTop="@dimen/def_margin"
        android:layout_marginBottom="@dimen/def_margin"
        android:text="@string/edit_pet"
        android:textColor="@color/blue_grey_800"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/vet_visits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_pet_title"
        android:orientation="horizontal"
        android:padding="@dimen/def_margin">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/upcoming_vet_visits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/upcoming_vet_visits"
            android:textColor="@color/blue_grey_800"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_visit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/turquoise"
            android:padding="16dp"
            android:text="@string/add_visit"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:icon="@drawable/plus_svgrepo_com" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/vet_LST"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/health_btns"
        android:layout_below="@id/vet_visits"
        tools:listitem="@layout/times_item">

    </androidx.recyclerview.widget.RecyclerView>


    <LinearLayout
        android:id="@+id/health_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/def_margin"
            android:backgroundTint="@color/turquoise"
            android:padding="16dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/discard_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/def_margin"
            android:backgroundTint="@color/grey_def"
            android:padding="16dp"
            android:text="@string/discard"
            android:textColor="@color/blue_grey_800"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>
