<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg"
    tools:context=".EditPet1Activity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/add_pet_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/def_margin"
        android:layout_marginTop="@dimen/def_margin"
        android:layout_marginBottom="@dimen/def_margin"
        android:text="@string/edit_pet"
        android:textColor="@color/blue_grey_800"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/pet_image_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_pet_title"
        android:layout_marginStart="@dimen/def_margin"
        android:layout_marginTop="@dimen/def_margin"
        android:layout_marginBottom="8dp"
        android:text="@string/pet_image"
        android:textColor="@color/blue_grey_800"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/pet_image_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pet_image_label"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/def_margin"
        android:gravity="left"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/def_margin">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/pet_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/no_image_svgrepo_com" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/upload_pet_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/grey_def"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:text="Upload a photo"
            android:textColor="@color/blue_grey_800"
            app:icon="@drawable/upload"
            app:iconTint="@color/blue_grey_800"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/pet_info_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pet_image_section"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/def_margin">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/pet_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet_name"
            android:textColor="@color/blue_grey_800" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/def_margin"
            android:background="@color/grey_def"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:textColor="@color/blue_grey_800"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/pet_sex_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet_sex"
            android:textColor="@color/blue_grey_800" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pet_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            android:background="@color/grey_bg">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_pet_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/def_margin"
                android:inputType="none"
                android:background="@color/grey_def"
                android:textStyle="bold"
                android:textColor="@color/blue_grey_800"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dob_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:textColor="@color/blue_grey_800" />

        <LinearLayout
            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/def_margin"
            android:background="@color/grey_def"
            android:orientation="horizontal"
            android:padding="@dimen/def_margin">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textColor="@color/blue_grey_800"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/date_picker"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/grey_def"
                app:icon="@drawable/calender"
                app:iconGravity="end"
                app:iconTint="@color/blue_grey_800" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pet_info_section"
        android:backgroundTint="@color/turquoise"
        android:padding="16dp"
        android:text="Save"
        android:enabled="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginHorizontal="@dimen/def_margin" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/discard_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/save_button"
        android:backgroundTint="@color/grey_def"
        android:padding="16dp"
        android:text="Discard"
        android:textColor="@color/blue_grey_800"
        android:textStyle="bold"
        android:layout_marginHorizontal="@dimen/def_margin" />

</RelativeLayout>
